--- a/style.css
+++ b/style.css
@@ -201,64 +201,26 @@
     padding: 60px 40px;
     width: min-content;
   }
+  #top{
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color:#2cb19d;
+    color: white;
+    cursor: pointer;
+    padding: 12px;
+    border-radius: 40px;
+  }
   .number {
     font-size: 48px;
     font-weight: 500px;
     color: rgba(18, 247, 214, 1);
   }
-  .languages{
-   display: flex;
-   justify-content: space-around;
-  }
-  .icon {
-    
-    color: #e7852a;
-    border-radius: 80px;
-    display: inline-block;
-    height: min-content;
-    overflow: hidden;
-    padding: 30px;
-    width: min-content;
-  }
-  .html .css .js .react {
-    display: inline-block;
-    justify-content: space-around;
-  }
  
-  .icon1{
-    background-color: #e7852a;
-  }
-  .icon2 {
-    background-color: #074269;
-  }
-  .icon3 {
-    background-color: #e7a020;
-  }
-  .icon4 {
-    background-color: #28a9e0;
-  }
-  .icon5 {
-    background-color: #30f0a0;
-  }
-  .icon6 {
-    background-color: #b6c71c;
-  }
-  .name2{
-    color: #0c73b8;
-  }
-  .name3 {
-    color: #e7a020;
-  }
-  .name4 {
-    color: #28a9e0;
-  }
-  .name5 {
-    color: #28e08a;
-  }
-  .name6 {
-    color: #28a9e0;
-  }
-  
   @media (max-width: 900px) {
     h1 {
       font-size: 44px;
