--- a/style.css
+++ b/style.css
@@ -157,6 +157,18 @@
     color: white;
     background-color: var(--branding-color);
   }
+  .social-links a {
+    font-size: 30px ;
+    color: var(--branding-color);
+    background-color: var(--secondary-color);
+    padding: 10px 14px;
+    border-radius: 50%;
+    transition: all 100ms ease-in-out;
+  }
+  .social-links a:hover {
+    color: white;
+    background-color: var(--branding-color);
+  }
   input {
     appearance: none;
     width: 100%;
