--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ input {
   position: absolute;
   bottom: 0;
   background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  background: #57bbac; 
   color: #f1f1f1;
   width: 100%;
   transition: 0.5s ease;
