--- a/style.css
+++ b/style.css
@@ -429,6 +429,9 @@ input {
       .contact-section {
         display: none;
       }
+       .col-md-4 {
+      margin-bottom: 15px; /* Adjust as needed */
+    }
 }
 
 .card {
